--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -7,6 +7,7 @@
     ~/.dotfiles: ''
     ~/.gitconfig:
     ~/.gitignore_global:
+    ~/.vimrc:
     ~/.zshrc:
 # - shell:
     # any git commands have to run after linking ~/.gitconfig
