--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,5 @@
-# C-b is not acceptable -- Vim uses it
-set-option -g prefix C-a
+# # C-b is not acceptable -- Vim uses it
+# set-option -g prefix C-a
 bind-key C-a last-window
 
 # Automatically set window title
