--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,7 @@ set -sg escape-time 0
 bind r source-file ~/.tmux.conf
 
 # THEME
+set -g base-index 1
 set -g status-bg black
 set -g status-fg white
 set -g window-status-current-bg white
