sync panes with C-b a

--- a/tmux.conf
+++ b/tmux.conf
@@ -1,6 +1,7 @@
 # # C-b is not acceptable -- Vim uses it
 # set-option -g prefix C-a
 bind-key C-a last-window
+bind-key a set-window-option synchronize-panes\; display-message "synchronize-panes is now #{?pane_synchronized,on,off}"
 
 # Automatically set window title
 set-window-option -g automatic-rename on
