--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,12 @@ bind-key a set-window-option synchronize-panes\; display-message "synchronize-pa
 # Automatically set window title
 set-window-option -g automatic-rename on
 set-option -g set-titles on
+set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
+set -g window-status-current-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
+
+# status bar updates every 15s by default**, change to 1s here 
+# (this step is optional - a lower latency might have negative battery/cpu usage impacts)
+set -g status-interval 1
 
 #set -g default-terminal screen-256color
 set -g status-keys vi
