--- a/tmux.conf
+++ b/tmux.conf
@@ -30,6 +30,10 @@ bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
+bind '%' split-window -h -c '#{pane_current_path}' # split panes horizontally
+bind '"' split-window -v -c '#{pane_current_path}' # split panes vertically
+bind c new-window -c '#{pane_current_path}' # Create new window
+
 # No delay for escape key press
 set -sg escape-time 0
 
