don't run wallpapers.sh by default

--- a/install.conf.work.yaml
+++ b/install.conf.work.yaml
@@ -13,7 +13,7 @@
     ~/.zshrc:
     ~/.zsh.d:
     ~/.posix.d:
-- shell:
-    - command: ./wallpapers.sh
-      stdout: true
+# - shell:
+#     - command: ./wallpapers.sh
+#       stdout: true
     # any git commands have to run after linking ~/.gitconfig
