--- a/install.conf.personal.yaml
+++ b/install.conf.personal.yaml
@@ -14,4 +14,6 @@
     ~/.zsh.d:
     ~/.posix.d:
 # - shell:
+#     - command: ./wallpapers.sh
+#       stdout: true
     # any git commands have to run after linking ~/.gitconfig
