--- a/config/custom_iterm2_settings/com.googlecode.iterm2.plist
+++ b/config/custom_iterm2_settings/com.googlecode.iterm2.plist
@@ -1224,7 +1224,7 @@
 			<key>Non-ASCII Anti Aliased</key>
 			<true/>
 			<key>Normal Font</key>
-			<string>FiraCodeNerdFontComplete-Retina 14</string>
+			<string>FiraCodeNF-Ret 12</string>
 			<key>Option Key Sends</key>
 			<integer>0</integer>
 			<key>Prompt Before Closing 2</key>
