--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -109,6 +109,7 @@
           - mongodb-compass
           - postman
           - rectangle
+          - spotify
           - temurin
           - visual-studio-code
           - whatsapp
