--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -107,6 +107,7 @@
           - jetbrains-toolbox
           - microsoft-edge
           - mongodb-compass
+          - obsidian
           - postman
           - rectangle
           - spotify
