update iterm setting: fullscreen tab-bar true

--- a/config/custom_iterm2_settings/com.googlecode.iterm2.plist
+++ b/config/custom_iterm2_settings/com.googlecode.iterm2.plist
@@ -1331,7 +1331,7 @@
 		</dict>
 	</dict>
 	<key>ShowFullScreenTabBar</key>
-	<false/>
+	<true/>
 	<key>SoundForEsc</key>
 	<false/>
 	<key>VisualIndicatorForEsc</key>
