comment out some unused casks

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -104,17 +104,17 @@
       community.general.homebrew_cask:
         name:
           - amethyst
-          - brave-browser
-          - hot
+#          - brave-browser
+#          - hot
           - iterm2
           - jetbrains-toolbox
-          - microsoft-edge
-          - mongodb-compass
+#          - microsoft-edge
+#          - mongodb-compass
           - obsidian
-          - postman
+#          - postman
           - rectangle
           - spotify
-          - temurin
+#          - temurin
           - visual-studio-code
           - whatsapp
       when: ansible_distribution == "MacOSX"
