add code formatters prettier and shfmt

--- a/bootstrap.yml
+++ b/bootstrap.yml
@@ -101,10 +101,12 @@
           - n
           - nodenv
           - pstree
+          - prettier
           - pv
           # TODO do I need this?
           # - rcm
           - rustup-init
+          - shfmt
           - tmux
           - watch
           - wireshark
